Page Menu
Home
GnuPG
Search
Configure Global Search
Log In
Create Task
Maniphest
T3528
cpr.c do_get_from_fd memory leak
Closed, Resolved
Public
Actions
Edit Task
Edit Related Tasks...
Create Subtask
Edit Parent Tasks
Edit Subtasks
Merge Duplicates In
Close As Duplicate
Edit Related Objects...
Edit Commits
Edit Mocks
Edit Revisions
Subscribe
Mute Notifications
Award Token
Assigned To
•
werner
Authored By
marcus
Nov 22 2017, 6:43 PM
2017-11-22 18:43:47 (UTC+1)
Tags
Bug Report
Subscribers
marcus
•
werner
Description
save is leaked after malloc
Revisions and Commits
rG GnuPG
rGea28ea18f3ee
gpg: Fix memory leaking for long inputs via --command-fd.
Event Timeline
marcus
created this task.
Nov 22 2017, 6:43 PM
2017-11-22 18:43:47 (UTC+1)
•
werner
added a commit:
rGea28ea18f3ee: gpg: Fix memory leaking for long inputs via --command-fd.
.
Nov 22 2017, 9:04 PM
2017-11-22 21:04:04 (UTC+1)
•
werner
closed this task as
Resolved
.
Nov 22 2017, 9:04 PM
2017-11-22 21:04:41 (UTC+1)
•
werner
claimed this task.
•
werner
added a subscriber:
•
werner
.
Comment Actions
Fixed for 2.2. Thanks.
Log In to Comment